<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.example.android.italyquizapp.MainActivity">


        <!--This is question number 1-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00796B"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/app_header"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="#129448"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="#FFFFFF"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="#CA283A"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/question_1"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/question_1_text"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/q01_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_1_hint"
                android:inputType="textShortMessage" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="#BDBDBD" />


        <!--This is question number 2-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/question_2"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/question_2_text"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radio_button_q02_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <RadioButton
                    android:id="@+id/radio_button_q02_a01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_answer_1"
                    android:textAppearance="?android:textAppearanceSmall" />

                <RadioButton
                    android:id="@+id/radio_button_q02_a02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_answer_2"
                    android:textAppearance="?android:textAppearanceSmall" />

                <RadioButton
                    android:id="@+id/radio_button_q02_a03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_answer_3"
                    android:textAppearance="?android:textAppearanceSmall" />

                <RadioButton
                    android:id="@+id/radio_button_q02_a04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_answer_4"
                    android:textAppearance="?android:textAppearanceSmall" />
            </RadioGroup>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="#BDBDBD" />

        <!--This is question number 3-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/question_3"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/question_3_text"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <RadioButton
                    android:id="@+id/radio_button_q03_a01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_3_answer_1"
                    android:textAppearance="?android:textAppearanceSmall" />

                <RadioButton
                    android:id="@+id/radio_button_q03_a02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_3_answer_2"
                    android:textAppearance="?android:textAppearanceSmall" />

                <RadioButton
                    android:id="@+id/radio_button_q03_a03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_3_answer_3"
                    android:textAppearance="?android:textAppearanceSmall" />

                <RadioButton
                    android:id="@+id/radio_button_q03_a04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_3_answer_4"
                    android:textAppearance="?android:textAppearanceSmall" />
            </RadioGroup>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="#BDBDBD" />

        <!--This is question number 4-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/question_4"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/question_4_text"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <RadioButton
                    android:id="@+id/radio_button_q04_a01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_answer_1"
                    android:textAppearance="?android:textAppearanceSmall" />

                <RadioButton
                    android:id="@+id/radio_button_q04_a02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_answer_2"
                    android:textAppearance="?android:textAppearanceSmall" />

                <RadioButton
                    android:id="@+id/radio_button_q04_a03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_answer_3"
                    android:textAppearance="?android:textAppearanceSmall" />

                <RadioButton
                    android:id="@+id/radio_button_q04_a04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_answer_4"
                    android:textAppearance="?android:textAppearanceSmall" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="12dp"
                android:background="#BDBDBD" />


        </LinearLayout>

        <!--This is question number 5-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/question_5"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/question_5_text"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/q05_checkbox_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_1"
                android:textAppearance="?android:textAppearanceSmall" />

            <CheckBox
                android:id="@+id/q05_checkbox_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_2"
                android:textAppearance="?android:textAppearanceSmall" />

            <CheckBox
                android:id="@+id/q05_checkbox_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_3"
                android:textAppearance="?android:textAppearanceSmall" />

            <CheckBox
                android:id="@+id/q05_checkbox_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_4"
                android:textAppearance="?android:textAppearanceSmall" />


        </LinearLayout>


        <Button
            android:id="@+id/check_answer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_check_answer"
            android:onClick="checkAnswers"/>


    </LinearLayout>
</ScrollView>